JVM update