@@ -4,7 +4,7 @@
 # USING THIS SCRIPT TO START YOUR SERVER SIGNIFIES YOU WILL COMPLY WITH MOJANG'S EULA.
 
 service="<server>" # Name of the service
-initialRam="3G" # RAM the server will start with
+initialRam="4G" # RAM the server will start with
 maximumRam="4G" # RAM the server will try to limit itself to
 maxPlayers="256" # Maximum player count (overrides server.properties)
 serverPort="25565" # Server port (overrides server.properties) ** DOES NOT FUNCTION WITH WATERFALL OR BUNGEECORD. Set these in config.yml after you've started and stopped it once **
@@ -16,8 +16,8 @@ restartDelay="10" # Wait this long before restarting (0 to just hard-exit the se
 updateCheckInterval="3" # DO NOT SET THIS BELOW 3! Seriously!
 jarFile="paperclip.jar" # Name of the jarfile (if it's updatable dynamically it'll be updated)
 # Supported auto-update jar names
-#  - "waterfall.jar" - PaperMC's latest 1.16.4 Waterfall - * Recommended proxy *
-#  - "paperclip-1.16.4.jar" - PaperMC's latest 1.16.4 Spigot version (Update regularly!)
+#  - "waterfall.jar" - PaperMC's latest 1.16.5 Waterfall - * Recommended proxy *
+#  - "paperclip.jar" - PaperMC's latest 1.16.5 paperclip version (Update regularly!)
 
 # Server folder cleanups
 # only executed at server start, set to 0 to disable
@@ -26,40 +26,39 @@ daysToCleanFtbBackups="0" # FTBU (most FTB modpack servers use this mod) server 
 
 # 1 = enable, 0 = disable
 cleanHsErrLogs="0" # clean all hard-crash logs made by java
-cleanProtocolSupportLogs="0" # clean all ProtocolSupport error logs ( https://www.spigotmc.org/resources/protocolsupport.7201/ )
+cleanProtocolSupportLogs="0" # clean all ProtocolSupport error logs ( https://build.true-games.org/job/ProtocolSupport/ )
 cleanCacheJars="0" # clean Paperclip cache jars
 cleanWaterfallModules="0" # clean Waterfall module jars
 cleanOpsList="0" # remove op perms from all known players
 cleanWhiteList="0" # de-whitelist all players
 cleanUsercache="0" # remove the UUID/username cache file
 
-# execution options
+# Execution options
 processname="java" # point this at your java binary
 
-# for most minecraft servers
-jvmArgs="-Xms$initialRam -Xmx$maximumRam -Xmn512M -XX:+UseParNewGC -XX:+CMSIncrementalPacing -XX:ParallelGCThreads=2 -XX:+CMSClassUnloadingEnabled -XX:MinHeapFreeRatio=5 -XX:MaxHeapFreeRatio=10 -Dcom.mojang.eula.agree=true -Dfile.encoding=UTF-8"
-jarCmdline="--host $bindingAddress --port $serverPort --max-players $maxPlayers nogui" # adding -W <folder> puts worlds there instead of in ./
+# For most minecraft servers
+jvmArgs="java -Xms10G -Xmx10G -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1 -Dusing.aikars.flags=https://mcflags.emc.gs -Daikars.new.flags=true -jar -Dcom.mojang.eula.agree=true"
+jarCmdline="--host $bindingAddress --port $serverPort --max-players $maxPlayers nogui -W:worlds" # Adding -W <folder> puts worlds there instead of in ./
 processargs="-Dgamemode=$service -server $jvmArgs -jar $jarFile $jarCmdline"
 
-# for bungee/waterfall only
-# comment the above lines out and uncomment these if you're using this for a bungeecord/waterfall instance
-#jvmArgs="-XX:+UseG1GC -XX:+UseStringDeduplication -Dio.netty.recycler.maxCapacity.default=20000 -XX:G1HeapRegionSize=4M"
-#processargs="-Dgamemode=$service -server -Xms$initialRam -Xmx$maximumRam -Xmn512M $jvmArgs -Dfile.encoding=UTF-8 -jar $jarFile"
+# For bungee/waterfall only
+# Comment the above lines out and uncomment these if you're using this for a bungeecord/waterfall instance
+# jvmArgs="-XX:+UseG1GC -XX:+UseStringDeduplication -Dio.netty.recycler.maxCapacity.default=20000 -XX:G1HeapRegionSize=4M"
+# processargs="-Dgamemode=$service -server -Xms$initialRam -Xmx$maximumRam -Xmn512M $jvmArgs -Dfile.encoding=UTF-8 -jar $jarFile"
 
-# remote jar locations
-#waterfallJarUrl="https://papermc.io/api/v2/projects/waterfall/versions/1.16/builds/394/downloads/waterfall-1.16-394.jar" # waterfall
-paperclipJarUrl="https://papermc.io/api/v2/projects/paper/versions/1.16.5/builds/449/downloads/paper-1.16.5-449.jar" # paperclip 1.16.5
+# Remote jar locations
+# waterfallJarUrl="https://papermc.io/api/v2/projects/waterfall/versions/1.16/builds/395/downloads/waterfall-1.16-395.jar" # waterfall 1.16.5
+paperclipJarUrl="https://papermc.io/api/v2/projects/paper/versions/1.16.5/builds/457/downloads/paper-1.16.5-457.jar" # paperclip 1.16.5
 
-# end configuration
+# End configuration
 
-# you touch what's below here and it could vaporize your cat
+# If you touch what's below here, it could vaporize your cat!
 
 if [[ ! $(whoami) == 'minecraft' ]]; then # prevent people from running stuff under the wrong users
 	clear
 	echo -e "`toilet "HEY!"`\nDon't run this script as the wrong user!"| lolcat
 	exit 1
 fi
-
 
 countdown(){
 	local OLD_IFS="${IFS}"
@@ -80,7 +79,6 @@ countdown(){
 	IFS="${OLD_IFS}"
 	echo "        "
 }
-
 
 cleanServer(){ # clean up our server files
 	echo "cleanServer: Cleaning!"
@@ -128,7 +126,6 @@ cleanServer(){ # clean up our server files
 	echo "cleanServer: Complete!"
 }
 
-
 jarUpdate(){ # update our server's jars and a few other things
 
 	if [[ $updateCheckInterval != "0" ]]; then
@@ -141,7 +138,6 @@ jarUpdate(){ # update our server's jars and a few other things
 		echo "jarUpdate: not updating jar (config override)"
 	fi
 }
-
 
 doJarUpdate() { # moved so forcing jar updates is a little less of a mess
 	echo "jarUpdate: attempting to update server jar..."
@@ -160,7 +156,6 @@ doJarUpdate() { # moved so forcing jar updates is a little less of a mess
 		echo "jarUpdate: not updating jar (non-standard jarfile named or CI server unavailable)"
 	fi
 }
-
 
 freePort() { # forcibly frees server's running port just in case it wasn't cleanly stopped or some real bad things happened.
 	echo "freePort: Attempting to forcibly unbind port. If this asks for a password, contact your systems administrator."
